# cz-changeup

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/cz_changeup/: cz_changeup.py
src/cz_changeup/templates/: CHANGELOG.md.j2
