[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cz-changeup"
version = "0.1.1"
description = "Commitizen plugin for better changelog generation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["changelog", "commitizen"]
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["commitizen>=3.0.0"]

[project.urls]
Changelog = "https://github.com/kmnhan/cz-changeup/blob/main/CHANGELOG.md"
Documentation = "https://github.com/kmnhan/cz-changeup#readme"
Issues = "https://github.com/kmnhan/cz-changeup/issues"
Source = "https://github.com/kmnhan/cz-changeup"

[project.entry-points."commitizen.plugin"]
cz_changeup = "cz_changeup.cz_changeup:ChangeupCz"

[tool.hatch.build.targets.wheel]
packages = ["src/cz_changeup"]

[tool.commitizen]
name = "cz_changeup"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_incremental = false

# cz-changeup specific settings
changeup_repo_base_url = "https://github.com/kmnhan/cz-changeup"
changeup_show_body = true
changeup_body_indent = 2
